@@ -142,7 +142,7 @@ QT5_SUBVER=5.4
 
 QCA_VER=2.1.0
 QWT_VER=6.1.3
-QTKEYCHAIN_VER=0.8.0
+QTKEYCHAIN_VER=0.9.1
 
 PROJ_VER=4.9.3
 GDAL_VER=1.11.1
