@@ -11,7 +11,7 @@ DEFAULT_LIB_TYPE=static
 GCC_VER=4.8.2
 # GCC_VER=4.8.5
 # GCC_EXTRA_VER=4.9.3
-GCC_EXTRA_VER=6.4.0
+GCC_EXTRA_VER=8.2.0
 # BINUTILS_VER=2.24
 BINUTILS_VER=2.27
 
@@ -143,7 +143,7 @@ QT5_SUBVER=5.10
 
 QCA_VER=2.1.3
 QWT_VER=6.1.3
-QTKEYCHAIN_VER=0.8.0
+QTKEYCHAIN_VER=0.9.1
 
 PROJ_VER=5.1.0
 GDAL_VER=2.2.3
