@@ -55,6 +55,7 @@ f3765cd4dcceb4d42d46f0d53471d7cedbad50f2112f0312c1dcc9c41eea9810  gcc-4.3.6.tar.
 f06ae7f3f790fbf0f018f6d40e844451e6bc3b7bc96e128e63b09825c1f8b29f  gcc-6.3.0.tar.bz2
 850bf21eafdfe5cd5f6827148184c08c4a0852a37ccf36ce69855334d2c914d4  gcc-6.4.0.tar.xz
 8a8136c235f64c6fef69cac0d73a46a1a09bb250776a050aec8f9fc880bebc17  gcc-7.1.0.tar.bz2
+196c3c04ba2613f893283977e6011b2345d1cd1af9abeac58e916b1aab3e0080  gcc-8.2.0.tar.xz
 f46b5944a8cabc8516673f231f466131cdfd2cdc6677dbee5d96ec7fc58a3340  gdal-1.11.1.tar.gz
 52f01bda8968643633016769607e6082a8ba1c746fadc2c1abe12cf7dc8f61dd  gdal-2.2.3.tar.gz
 e1c1ced9c5bc8f93ef0faf0a8c7717abf784d10a7b270d2285e8e1f3b93f2bed  giflib-4.1.6.tar.bz2
@@ -279,6 +280,7 @@ aaf219667f87d07a216bd30374013f97deea964471d827f7fc15bdc572e227d9  qtgamepad-ever
 d9d27236696221098e832d6fee8c0fbb2834b1670d9ca1e5bf3d0fbc8e5448f3  qtgraphicaleffects-everywhere-src-5.11.1.tar.xz
 ba8f477be1b0675ce36f48530db050d2922b2a0d6ff80c46559245a94aede80a  qtgraphicaleffects-opensource-src-5.4.2.tar.xz
 b492f603197538bc04b2714105b1ab2b327a9a98d400d53d9a7cb70edd2db12f  qtkeychain-0.8.0.tar.gz
+9c2762d9d0759a65cdb80106d547db83c6e9fdea66f1973c6e9014f867c6f28e  qtkeychain-0.9.1.tar.gz
 d84dcec7cfbc99a13e048f935783b0c2e1cb540defc82d77ac869a5b76aa85c7  qtlocation-everywhere-src-5.10.0.tar.xz
 5e5cc05517c701a2c8ebba1fbe3ddff2b6b90d5aa554d307b1c477fe0cfd72c9  qtlocation-everywhere-src-5.10.1.tar.xz
 172c9a39e8267739e20d60bda45de3db02b13163245776bdc696d8c5ab5f790f  qtlocation-everywhere-src-5.11.1.tar.xz
