@@ -8,8 +8,10 @@
 * Update in all static configs:
   - OPENSSL_VER from 1.0.2o to 1.0.2p
 * Update in all (supported) configs:
+  - GCC_EXTRA_VER from 6.4.0 to 8.2.0
   - PROTOBUF_VER from 3.5.1 to 3.6.1
   - OPENSCENEGRAPH_VER from 3.6.1 to 3.6.2
+  - QTKEYCHAIN_VER from 0.8.0 to 0.9.1
 
 --- v3.2 (2018-07-07) ---
 * Add new native packages: cmake, pkg-config.
